--- a/css/less/content.less
+++ b/css/less/content.less
@@ -2839,8 +2839,8 @@ body.popup-open {
     .popup-box {
         &.popup-how-it-works {
             width: 375px;
-            padding: 32px 20px;
-            border-radius: 0;
+            padding: 32px 20px 0 20px;
+            //border-radius: 0;
             .popup-title-wrap {
                 padding: 0 0 24px 0;
                 .popup-title {
@@ -2849,6 +2849,9 @@ body.popup-open {
                     line-height: 1.2;
                     letter-spacing: -0.02em;
                 }
+            }
+            .popup-content-wrap {
+                padding-bottom: 32px;
             }
             .btn-action-ico.ico-close-main {
                 top: 15px;
