--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1787,7 +1787,7 @@
         flex-wrap: wrap;
     }
     .panel-title {
-        font-size: 2.4rem;
+        font-size: 2rem;
         line-height: (32/24);
         color: #fff;
         font-weight: 600;
@@ -1869,6 +1869,7 @@
     }
 }
 @media (max-width: 639px) {
+    
     .item-tile-campaigns-main {
         flex-direction: column;
         &.tile-second {
@@ -1888,6 +1889,12 @@
             padding: 0;
             width: 40rem;
             max-width: 100%;
+        }
+    }
+    .header-panel-box {
+        .panel-title {
+            width: 100%;
+            margin-bottom: 4px;
         }
     }
     .main-giveaways-box {
@@ -1917,6 +1924,9 @@
     }
 }
 @media (max-width: 479px) {
+    .item-tile-service-full.tile-third {
+        padding: 4.8rem 3.2rem;
+    }
     .main-giveaways-box {
         .item-wrap {
             width: 100%;
