--- a/css/style.css
+++ b/css/style.css
@@ -12522,7 +12522,7 @@ select::-ms-expand {
       flex-wrap: wrap;
 }
 .header-panel-box .panel-title {
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.33333333;
   color: #fff;
   font-weight: 600;
@@ -12603,6 +12603,10 @@ select::-ms-expand {
     width: 40rem;
     max-width: 100%;
   }
+  .header-panel-box .panel-title {
+    width: 100%;
+    margin-bottom: 4px;
+  }
   .main-giveaways-box .item-wrap {
     width: 50%;
   }
@@ -12624,6 +12628,9 @@ select::-ms-expand {
   }
 }
 @media (max-width: 479px) {
+  .item-tile-service-full.tile-third {
+    padding: 4.8rem 3.2rem;
+  }
   .main-giveaways-box .item-wrap {
     width: 100%;
   }
