--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1996,6 +1996,11 @@
             max-width: 100%;
         }
     }
+    .payments-tiles-box {
+        .item-wrap {
+            width: 50%;
+        }
+    }
     .main-services-full-box {
         &.section-small {
             .action-wrap {
@@ -2054,6 +2059,20 @@
 @media (max-width: 479px) {
     .item-tile-service-full.tile-third {
         padding: 4.8rem 3.2rem;
+    }
+    .payments-tiles-box {
+        .item-wrap {
+            width: 100%;
+        }
+        .info-inner-wrap {
+            text-align: center;
+            .info-title {
+                padding: 1rem;
+            }
+            .info-action {
+                padding: 0 1rem;
+            }
+        }
     }
     .main-giveaways-box {
         .item-wrap {
